--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chattogram Board Students' Ranking</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .locked {
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>Chattogram Board Students' SSC Ranking</h1>
+        <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
         <h2>Designed by Hasnyne (CC'25)</h2>
     </header>
     <nav aria-label="breadcrumb">
@@ -27,6 +32,7 @@
                     <option value="2024">SSC 2024</option>
                     <option value="2023">SSC 2023</option>
                     <option value="2022">SSC 2022</option>
+                    <option value="hsc_2023">HSC 2023</option>
                 </select>
             </div>
             <div id="content"></div>
