--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section>
             <div class="year-dropdown">
                 <select id="yearDropdown" onchange="loadYear(this.value)">
-                    <option value="">Select Year</option>
+                    <option value="">Select Year and Exam</option>
                     <option value="2024">SSC 2024</option>
                     <option value="2023">SSC 2023</option>
                     <option value="2022">SSC 2022</option>
@@ -43,6 +43,7 @@
         <button id="closePopup" class="close-btn">&times;</button>
         <div class="popup-content" id="popupContent"></div>
     </div>
+    <footer> </footer>
     <script src="script.js"></script>
 </body>
 </html>
