--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             <li><strong>Filter by School:</strong> Easily filter and view results from specific schools to compare performance.</li>
             <li><strong>Access Historical Data:</strong> Look up results from previous years to see how students and schools have performed over time.</li>
         </ul>
-    <p>Source code:<a href="https://drive.google.com/drive/folders/1AhtvlTV6845SBLMpe0MgruJIv-0aG1Fi?usp=sharing">Click here</a></p>
+    <p>Source code:<a href="https://pastebin.pl/view/1edd9a62">Click here</a></p>
     </div>
 
 </body>
