--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 </head>
 <body>
     <header>
-        <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
+        <a href="index.html">
+            <img src="home.png" alt="Home Icon" class="home-icon">
+        </a>        <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
         <h2>Designed by Hasnyne (CC'25)</h2>
         <span class="menu-btn" onclick="toggleMenu()">&#9776;</span>
     </header>
+
     <div class="sidebar" id="sidebar">
         <button onclick="navigateTo('index.html')">Home</button>
         <button onclick="navigateTo('about.html')">About</button>
@@ -47,7 +50,7 @@
                 </select>
             </div>
             <div id="content"></div>
-            <div id="noDataMessage" style="display:none;">No data found for the selected year and group.</div>
+            <div id="noDataMessage" style="display:none;">oops! No data found </div>
         </section>
     </main>
     <div id="popupWindow" style="display:none;">
