--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     <header>
         <a href="index.html">
             <img src="home.png" alt="Home Icon" class="home-icon">
-        </a>        <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
+        </a>
+        <h1>Chattogram Board Students' SSC & HSC Ranking</h1>
         <h2>Designed by Hasnyne (CC'25)</h2>
-        <span class="menu-btn" onclick="toggleMenu()">&#9776;</span>
+        <span class="menu-btn" id="menuButton">&#9776;</span>
     </header>
 
     <div class="sidebar" id="sidebar">
