--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <div class="sidebar" id="sidebar">
         <button onclick="navigateTo('index.html')">Home</button>
         <button onclick="navigateTo('about.html')">About</button>
+        <button onclick="navigateTo('review.html')">Feedback & Review</button>
         <button onclick="navigateTo('contactus.html')">Contact Us</button>
         <div class="settings">
             <label>
