--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         <button id="closePopup" class="close-btn">&times;</button>
         <div class="popup-content" id="popupContent"></div>
     </div>
+</div>
+<button onclick="scrollToTop()" id="scrollToTopBtn" title="Go to top">
+    <img src="arrow-up.png" alt="Scroll to top">
+  </button>
     
     <script src="script.js"></script>
 </body>
