--- a/contactus.html
+++ b/contactus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img src="home-icon.png" alt="Home Icon" class="home-icon"></a>
+        <a href="index.html"><img src="home.png" alt="Home Icon" class="home-icon"></a>
         <h1>Contact Us</h1>
     </header>
 
