--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                     <option value="2024">SSC 2024</option>
                     <option value="2023">SSC 2023</option>
                     <option value="2022">SSC 2022</option>
+                    <option value="hsc_2024">HSC 2024</option>
                     <option value="hsc_2023">HSC 2023</option>
+                    
                 </select>
             </div>
             <div id="content"></div>
