--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="year-dropdown">
                 <select id="yearDropdown" onchange="loadYear(this.value)">
                     <option value="">Select Year and Exam</option>
+                    <option value="2025">SSC 2025</option>
                     <option value="2024">SSC 2024</option>
                     <option value="2023">SSC 2023</option>
                     <option value="2022">SSC 2022</option>
