--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chattogram Board Students' Ranking - SSC & HSC</title>
-    
+    <meta name="description" content="Board rank viewer for CTG board - search any roll and get results fast.">
+<meta name="keywords" content="boardrank, ctg, rank, result, roll number, chittagong board">
+<meta name="robots" content="index, follow">
+
     <meta name="description" content="Explore the rankings of SSC and HSC students from Chattogram Board. Designed by Hasnyne (CC'25).">
     <meta name="keywords" content="Chattogram Board, SSC Ranking, HSC Ranking, Student Rankings, Education, Hasnyne, Chittagong Board rank, Board rank, SSC result 2024, HSC result 2024, ctg bise, ssc result 2023 chittagong board, ssc result 2024 chittagong board, hsc result 2024 chittagong board, syed hasnyne mostafa, hasnyne">
     <meta name="author" content="Hasnyne (CC'25)">
