--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-    <title>Chattogram Board Students' Ranking - SSC & HSC</title>
+    <title>Chittagong Board - SSC Result Ranking - 2025</title>
     <meta name="description" content="Board rank viewer for CTG board - search any roll and get results fast. Designed by Hasnyne (CC'25).">
-    <meta name="keywords" content="boardrank, ctg, rank, result, roll number, chittagong board, ssc result 2024, hsc result 2024, Chattogram Board, Hasnyne">
+    <meta name="keywords" content="boardrank, ctg, rank, result, roll number, chittagong board, ssc result 2025, hsc result 2025, ssc result 2024, hsc result 2024, Chattogram Board, Hasnyne">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Hasnyne (CC'25)">
 
@@ -18,9 +18,18 @@
     <link rel="canonical" href="https://boradrankctg.github.io/rank/" />
 
 
-    <meta property="og:title" content="Chattogram Board Students' Ranking - SSC & HSC" />
-    <meta property="og:description" content="Explore the rankings of SSC and HSC students from Chattogram Board. Designed by Hasnyne (CC'25)." />
+    <meta property="og:title" content="Chittagong Board - SSC Result Ranking - 2025" />
+    <meta property="og:description" content="Chittagong Board - SSC Result Ranking - 2025, ssc result 2024 chittagong board, ssc result 2025 chittagong board, Discover the unofficial SSC Result Ranking 2025 
+    for the Chattogram Education Board. This website offers a complete and organized list of
+     top-performing students across all schools in Chattogram, ranked by GPA, total marks,
+      and subject-wise performance. Easily find your school or student using our smart search feature,
+       and compare two students side-by-side with visual progress bars showing marks in each subject. Whether you’re a student, 
+       guardian, or teacher, get instant access to accurate rankings, school-wise results, and individual performance analytics. 
+       Built for transparency, speed, and smart result tracking—this is your one-stop platform for SSC 2025 rankings under the Chattogram Board.bise ctg
+       boardrank, ctg, rank, result, roll number, chittagong board, ssc result 2025, hsc result 2025, ssc result 2024, hsc result 2024, Chattogram Board, Hasnyne
+       " />
    
+
     <meta property="og:url" content="https://boradrankctg.github.io/rank/" />
     <meta property="og:type" content="website" />
 
@@ -79,6 +88,7 @@
                 </select>
             </div>
             <div id="content"></div>
+            
             <div id="noDataMessage" style="display:none;">Oops! No data found.</div>
         </section>
         <div class="new-box-wrapper">
