--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
         <button onclick="navigateTo('index.html')">Home</button>
         <button onclick="navigateTo('about.html')">About</button>
         <button onclick="navigateTo('contactus.html')">Contact Us</button>
+        <button onclick="navigateTo('review.html')">Reviews</button>
+
         <div class="settings">
             <label>
                 <input type="checkbox" id="themeToggle" onchange="toggleTheme()"> Dark Mode
