--- a/review.html
+++ b/review.html
@@ -6,25 +6,6 @@
   <title>BoardRank Reviews</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    .review-box {
-      background: #f0f0f0;
-      padding: 15px;
-      border-radius: 8px;
-      margin: 15px 0;
-    }
-    .review-comment {
-      margin: 8px 0;
-    }
-    .reply-box {
-      margin-left: 20px;
-      font-size: 0.9rem;
-      background: #fff;
-      padding: 6px;
-      border-left: 2px solid #000;
-      margin-top: 8px;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -32,20 +13,19 @@
     <h1>Student Reviews</h1>
   </header>
 
-
-
   <main>
     <div class="popup-content" style="max-width: 600px; margin: 20px auto;">
       <h2>💬 Leave a Review</h2>
-      <div id="starContainer" style="font-size: 1.5rem; color: gold; cursor: pointer;">
-        <span onclick="rateSite(1)">&#9734;</span>
-        <span onclick="rateSite(2)">&#9734;</span>
-        <span onclick="rateSite(3)">&#9734;</span>
-        <span onclick="rateSite(4)">&#9734;</span>
-        <span onclick="rateSite(5)">&#9734;</span>
+      <input id="reviewName" type="text" placeholder="Your name (optional)" style="width: 100%; margin-top: 10px;" />
+      <div id="starContainer" style="font-size: 1.5rem; color: gold; cursor: pointer; margin-top: 10px;">
+        <span onclick="rateSite(1)">☆</span>
+        <span onclick="rateSite(2)">☆</span>
+        <span onclick="rateSite(3)">☆</span>
+        <span onclick="rateSite(4)">☆</span>
+        <span onclick="rateSite(5)">☆</span>
       </div>
       <textarea id="reviewText" rows="3" placeholder="Write your thoughts..." style="width: 100%; margin-top: 10px;"></textarea>
-      <button onclick="submitReview()">Submit Review</button>
+      <button onclick="submitReview()" style="margin-top: 10px;">Submit Review</button>
     </div>
 
     <div style="max-width: 600px; margin: auto;">
@@ -54,9 +34,7 @@
     </div>
   </main>
 
-  <!-- Firebase SDKs (browser-safe version) -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js"></script>
+  <!-- Firebase Modular SDK -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
@@ -66,7 +44,7 @@
       set,
       onValue,
       runTransaction,
-      child
+      remove
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
   
     const firebaseConfig = {
@@ -83,18 +61,29 @@
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
   
+    // Create or get a unique userId
+    let userId = localStorage.getItem("userId");
+    if (!userId) {
+      userId = crypto.randomUUID(); // generate random id
+      localStorage.setItem("userId", userId);
+    }
+  
+    // Optional: Set this to match your own userId for admin control
+    const ADMIN_ID = "admin1234";
+  
+    // ⭐ Set star rating
     function rateSite(rating) {
-  const stars = document.getElementById("starContainer").children;
-  for (let i = 0; i < stars.length; i++) {
-    stars[i].innerHTML = i < rating ? "★" : "☆";
-  }
-  localStorage.setItem("userRating", rating);
-}
-
-// ADD THIS 👇
-window.rateSite = rateSite;
-
+      const stars = document.getElementById("starContainer").children;
+      for (let i = 0; i < stars.length; i++) {
+        stars[i].innerHTML = i < rating ? "★" : "☆";
+      }
+      localStorage.setItem("userRating", rating);
+    }
+    window.rateSite = rateSite;
+  
+    // 💬 Submit new review
     async function submitReview() {
+      const name = document.getElementById("reviewName").value.trim() || "Anonymous";
       const comment = document.getElementById("reviewText").value.trim();
       const rating = localStorage.getItem("userRating") || 0;
   
@@ -106,21 +95,26 @@ window.rateSite = rateSite;
       try {
         const reviewRef = push(ref(db, "reviews"));
         await set(reviewRef, {
+          name,
           comment,
           rating: parseInt(rating),
           likes: 0,
           replies: {},
-          timestamp: Date.now()
+          timestamp: Date.now(),
+          userId // 🔐 save who posted
         });
   
         document.getElementById("reviewText").value = "";
+        document.getElementById("reviewName").value = "";
         rateSite(0);
       } catch (error) {
         console.error("Error submitting review:", error);
         alert("Review submission failed.");
       }
     }
+    window.submitReview = submitReview;
   
+    // 📥 Load all reviews
     function loadReviews() {
       const container = document.getElementById("reviewsContainer");
       const reviewsRef = ref(db, "reviews");
@@ -138,8 +132,11 @@ window.rateSite = rateSite;
             ).join("");
           }
   
+          const canDelete = review.userId === userId || userId === ADMIN_ID;
+  
           container.innerHTML += `
             <div class="review-box">
+              <div><strong>${review.name || "Anonymous"}</strong></div>
               <div>⭐ ${review.rating || "No rating"}</div>
               <div class="review-comment">${review.comment}</div>
               <button onclick="likeReview('${id}')">❤️ ${review.likes || 0}</button>
@@ -147,6 +144,7 @@ window.rateSite = rateSite;
                 <input type="text" placeholder="Reply..." id="reply-${id}" style="width: 80%;" />
                 <button onclick="submitReply('${id}')">Reply</button>
               </div>
+              ${canDelete ? `<button onclick="deleteReview('${id}')">🗑️ Delete</button>` : ""}
               ${replies}
             </div>
           `;
@@ -154,13 +152,13 @@ window.rateSite = rateSite;
       });
     }
   
-    window.submitReview = submitReview;
-  
+    // ❤️ Like a review
     window.likeReview = function (id) {
       const likeRef = ref(db, `reviews/${id}/likes`);
       runTransaction(likeRef, (current) => (current || 0) + 1);
     };
   
+    // 💬 Submit a reply
     window.submitReply = async function (id) {
       const input = document.getElementById("reply-" + id);
       const text = input.value.trim();
@@ -168,6 +166,13 @@ window.rateSite = rateSite;
       const replyRef = push(ref(db, `reviews/${id}/replies`));
       await set(replyRef, { text });
       input.value = "";
+    };
+  
+    // 🗑️ Delete a review
+    window.deleteReview = async function (id) {
+      if (confirm("Are you sure you want to delete this review?")) {
+        await remove(ref(db, `reviews/${id}`));
+      }
     };
   
     document.addEventListener("DOMContentLoaded", loadReviews);
