--- a/about.html
+++ b/about.html
@@ -30,22 +30,23 @@
   <div class="icon-nav-wrapper" aria-label="Quick navigation">
     <nav class="icon-nav-container">
       <a href="index.html" title="Home" aria-label="Go to Home">
-        <i class="fas fa-house"></i>
+        <i class="fas fa-house-chimney"></i>
       </a>
       <a href="about.html" title="About" aria-label="Learn About Us">
-        <i class="fas fa-user-circle"></i>
+        <i class="fas fa-user-tie"></i>
       </a>
       <a href="contactus.html" title="Contact Us" aria-label="Contact Us">
-        <i class="fas fa-phone"></i>
+        <i class="fas fa-envelope-open-text"></i>
       </a>
       <a href="review.html" title="Reviews" aria-label="See Reviews">
-        <i class="fas fa-comments"></i>
+        <i class="fas fa-star-half-stroke"></i>
       </a>
       <button id="shareBtn" title="Share This Site" aria-label="Share This Site">
-        <i class="fas fa-share"></i>
+        <i class="fas fa-bullhorn"></i>
       </button>
     </nav>
   </div>
+  
   <main>
     <h1><i class="fas fa-info-circle"></i> About This Project</h1>
     <p>Yo! I'm <strong>Hasnyne</strong>, an ex-student of <strong>Chittagong College</strong>. I built this site to help <span class="green">SSC students</span> find out where they stand — and where they can go next.</p>
